flask on docker container

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,14 +1,23 @@
-<h1>Hello!! {{name|upper}}</h1>
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="shortcut icon" href="static/imgs/pcb.png" />
+    <!--This is the title-->
+    <title> Yoas1 flask env </title>
+  </head>
+  <body>
+    <center>
+      <!--Headigs-->
+      <h1>Hello asaf!!!</h1>
 
-<p>Welcome to my flask application</p>
-<p>date {{date}}</p>
+      <!--Paragraph-->
+      <p>© Yoas1</p><br>
 
-<a href="https://jinja.palletsprojects.com/en/3.1.x/templates/#builtin-filters">Jinja2 fillters</a>
-
-{% for item in list %}
-    {% if item == "A" %}
-        <p> we found A!</p>
-    {% else %}
-        <p> {{item}}</p>
-    {% endif %}
-{% endfor %}
+      <!--link-->
+      <a href="https://github.com/Yoas1">Yoas1-github</a>
+    </center>
+  </body>
+</html>
